--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="public/css/style.css">
+  <script src="https://kit.fontawesome.com/c9edb6d62a.js" crossorigin="anonymous"></script>
   <title>Ohmyfood!</title>
 </head>
 <body>
-  
+  <header>
+    <i class="fas fa-arrow-left"></i>
+    <img src="public/img/logo/ohmyfood.png" alt="logo">
+  </header>
+  <main>
+    <section class="reservation">
+      
+    </section>
+    <section class="fonctionnement">
+
+    </section>
+    <section class="restaurent">
+
+    </section>
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
