--- a/index.html
+++ b/index.html
@@ -52,7 +52,49 @@
     </section>
     <!-- Restaurents -->
     <section class="restaurent">
-
+      <div class="restaurent__container">
+        <h1>Restaurants</h1>
+        <div class="restaurent__card">
+          <img src="public/img/restaurants/palette_gout.jpg">
+          <div class="restaurent__info__container">
+            <div class="restaurent__card__info">
+              <h3>La palette du goût</h3>
+              <p>Mélilmontant</p>
+            </div>
+            <i class="far fa-heart"></i>
+          </div>
+        </div>
+        <div class="restaurent__card">
+          <img src="public/img/restaurants/note_enchantee.jpg">
+          <div class="restaurent__info__container">
+            <div class="restaurent__card__info">
+              <h3>La note enchantée</h3>
+              <p>Charonne</p>
+            </div>
+            <i class="far fa-heart"></i>
+          </div>
+        </div>
+        <div class="restaurent__card">
+          <img src="public/img/restaurants/francaise.jpg">
+          <div class="restaurent__info__container">
+            <div class="restaurent__card__info">
+              <h3>À la française</h3>
+              <p>Cité Rouge</p>
+            </div>
+            <i class="far fa-heart"></i>
+          </div>
+        </div>
+        <div class="restaurent__card">
+          <img src="public/img/restaurants/delice_sens.jpg">
+          <div class="restaurent__info__container">
+            <div class="restaurent__card__info">
+              <h3>Le délice des sens</h3>
+              <p>Folie-Méricourt</p>
+            </div>
+            <i class="far fa-heart"></i>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
   <!-- Footer -->
