--- a/index.html
+++ b/index.html
@@ -55,51 +55,93 @@
       <div class="restaurent__container">
         <h1>Restaurants</h1>
         <div class="restaurent__card">
-          <img src="public/img/restaurants/palette_gout.jpg">
-          <div class="restaurent__info__container">
-            <div class="restaurent__card__info">
-              <h3>La palette du goût</h3>
-              <p>Mélilmontant</p>
+          <a href="#">
+            <p class="nouveau">Nouveau</p>
+            <img src="public/img/restaurants/palette_gout.jpg">
+            <div class="restaurent__info__container">
+              <div class="restaurent__card__info">
+                <h3>La palette du goût</h3>
+                <p>Mélilmontant</p>
+              </div>
+              <div class="heart">
+              <i class="far fa-heart fa-2x"></i>
+              <i class="fas fa-heart fa-2x"></i>
+              </div>
             </div>
-            <i class="far fa-heart"></i>
-          </div>
+          </a>
         </div>
         <div class="restaurent__card">
-          <img src="public/img/restaurants/note_enchantee.jpg">
-          <div class="restaurent__info__container">
-            <div class="restaurent__card__info">
-              <h3>La note enchantée</h3>
-              <p>Charonne</p>
+          <a href="#">
+            <p class="nouveau">Nouveau</p>
+            <img src="public/img/restaurants/note_enchantee.jpg">
+            <div class="restaurent__info__container">
+              <div class="restaurent__card__info">
+                <h3>La note enchantée</h3>
+                <p>Charonne</p>
+              </div>
+              <div class="heart">
+                <i class="far fa-heart fa-2x"></i>
+                <i class="fas fa-heart fa-2x"></i>
+              </div>
             </div>
-            <i class="far fa-heart"></i>
-          </div>
+          </a>
         </div>
         <div class="restaurent__card">
-          <img src="public/img/restaurants/francaise.jpg">
-          <div class="restaurent__info__container">
-            <div class="restaurent__card__info">
-              <h3>À la française</h3>
-              <p>Cité Rouge</p>
+          <a href="#">
+            <img src="public/img/restaurants/francaise.jpg">
+            <div class="restaurent__info__container">
+              <div class="restaurent__card__info">
+                <h3>À la française</h3>
+                <p>Cité Rouge</p>
+              </div>
+              <div class="heart">
+                <i class="far fa-heart fa-2x"></i>
+                <i class="fas fa-heart fa-2x"></i>
+              </div>
             </div>
-            <i class="far fa-heart"></i>
-          </div>
+          </a>
         </div>
         <div class="restaurent__card">
-          <img src="public/img/restaurants/delice_sens.jpg">
-          <div class="restaurent__info__container">
-            <div class="restaurent__card__info">
-              <h3>Le délice des sens</h3>
-              <p>Folie-Méricourt</p>
+          <a href="#">
+            <img src="public/img/restaurants/delice_sens.jpg">
+            <div class="restaurent__info__container">
+              <div class="restaurent__card__info">
+                <h3>Le délice des sens</h3>
+                <p>Folie-Méricourt</p>
+              </div>
+              <div class="heart">
+                <i class="far fa-heart fa-2x"></i>
+                <i class="fas fa-heart fa-2x"></i>
+              </div>
             </div>
-            <i class="far fa-heart"></i>
-          </div>
+          </a>
         </div>
       </div>
     </section>
   </main>
   <!-- Footer -->
   <footer>
-
+    <div class="footer__container">
+      <img src="public/img/logo/ohmyfood.png" alt="logo">
+      <div class="footer__info">
+        <a href="#">
+          <i class="fas fa-utensils"></i>
+          <p>Proposer un restaurant</p>
+        </a>
+      </div>
+      <div class="footer__info">
+        <a href="#">
+          <i class="fas fa-handshake"></i>
+          <p>Devenir partenaire</p>
+        </a>
+      </div>
+      <a href="#">
+        <p>Mentions Légales</p>
+      </a>
+      <a href="#">
+        <p>Contact</p>
+      </a>
+    </div>
   </footer>
 </body>
 </html>
