--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="restaurent__container">
         <h1>Restaurants</h1>
         <div class="restaurent__card">
-          <a href="#">
+          <a href="palette.html">
             <p class="nouveau">Nouveau</p>
             <img src="public/img/restaurants/palette_gout.jpg">
             <div class="restaurent__info__container">
@@ -71,7 +71,7 @@
           </a>
         </div>
         <div class="restaurent__card">
-          <a href="#">
+          <a href="enchantee.html">
             <p class="nouveau">Nouveau</p>
             <img src="public/img/restaurants/note_enchantee.jpg">
             <div class="restaurent__info__container">
@@ -87,7 +87,7 @@
           </a>
         </div>
         <div class="restaurent__card">
-          <a href="#">
+          <a href="francaise.html">
             <img src="public/img/restaurants/francaise.jpg">
             <div class="restaurent__info__container">
               <div class="restaurent__card__info">
@@ -102,7 +102,7 @@
           </a>
         </div>
         <div class="restaurent__card">
-          <a href="#">
+          <a href="delice.html">
             <img src="public/img/restaurants/delice_sens.jpg">
             <div class="restaurent__info__container">
               <div class="restaurent__card__info">
