--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/c9edb6d62a.js" crossorigin="anonymous"></script>
   <title>Ohmyfood!</title>
 </head>
-<body>
+<body">
   <!-- Herder -->
   <header>
     <div class="header__container">
@@ -30,94 +30,96 @@
       </div>
     </section>
     <!-- Fonctionnement -->
-    <section class="fonctionnement">
-      <div class="fonctionnement__container">
-        <h1>Fonctionnement</h1>
-        <div class="fonctionnement__regles">
-          <span>1</span>
-          <i class="fas fa-mobile-alt"></i>
-          <h3>Choisissez un restaurant</h3>
+    <div class="site__container">
+      <section class="fonctionnement">
+        <div class="fonctionnement__container">
+          <h1>Fonctionnement</h1>
+          <div class="fonctionnement__regles">
+            <span>1</span>
+            <i class="fas fa-mobile-alt"></i>
+            <h3>Choisissez un restaurant</h3>
+          </div>
+          <div class="fonctionnement__regles">
+            <span>2</span>
+            <i class="fas fa-list-ul"></i>
+            <h3>Composez votre menu</h3>
+          </div>
+          <div class="fonctionnement__regles">
+            <span>3</span>
+            <i class="fas fa-store"></i>
+            <h3>Dégustez au restaurant</h3>
+          </div>
         </div>
-        <div class="fonctionnement__regles">
-          <span>2</span>
-          <i class="fas fa-list-ul"></i>
-          <h3>Composez votre menu</h3>
-        </div>
-        <div class="fonctionnement__regles">
-          <span>3</span>
-          <i class="fas fa-store"></i>
-          <h3>Dégustez au restaurant</h3>
-        </div>
-      </div>
-    </section>
-    <!-- Restaurents -->
-    <section class="restaurent">
-      <div class="restaurent__container">
-        <h1>Restaurants</h1>
-        <div class="restaurent__card">
-          <a href="palette.html">
-            <p class="nouveau">Nouveau</p>
-            <img src="public/img/restaurants/palette_gout.jpg">
-            <div class="restaurent__info__container">
-              <div class="restaurent__card__info">
-                <h3>La palette du goût</h3>
-                <p>Mélilmontant</p>
-              </div>
-              <div class="heart">
-              <i class="far fa-heart fa-2x"></i>
-              <i class="fas fa-heart fa-2x"></i>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="restaurent__card">
-          <a href="enchantee.html">
-            <p class="nouveau">Nouveau</p>
-            <img src="public/img/restaurants/note_enchantee.jpg">
-            <div class="restaurent__info__container">
-              <div class="restaurent__card__info">
-                <h3>La note enchantée</h3>
-                <p>Charonne</p>
-              </div>
-              <div class="heart">
+      </section>
+      <!-- Restaurents -->
+      <section class="restaurent">
+        <div class="restaurent__container">
+          <h1>Restaurants</h1>
+          <div class="restaurent__card">
+            <a href="palette.html">
+              <p class="nouveau">Nouveau</p>
+              <img src="public/img/restaurants/palette_gout.jpg">
+              <div class="restaurent__info__container">
+                <div class="restaurent__card__info">
+                  <h3>La palette du goût</h3>
+                  <p>Mélilmontant</p>
+                </div>
+                <div class="heart">
                 <i class="far fa-heart fa-2x"></i>
                 <i class="fas fa-heart fa-2x"></i>
+                </div>
               </div>
-            </div>
-          </a>
+            </a>
+          </div>
+          <div class="restaurent__card">
+            <a href="enchantee.html">
+              <p class="nouveau">Nouveau</p>
+              <img src="public/img/restaurants/note_enchantee.jpg">
+              <div class="restaurent__info__container">
+                <div class="restaurent__card__info">
+                  <h3>La note enchantée</h3>
+                  <p>Charonne</p>
+                </div>
+                <div class="heart">
+                  <i class="far fa-heart fa-2x"></i>
+                  <i class="fas fa-heart fa-2x"></i>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="restaurent__card">
+            <a href="francaise.html">
+              <img src="public/img/restaurants/francaise.jpg">
+              <div class="restaurent__info__container">
+                <div class="restaurent__card__info">
+                  <h3>À la française</h3>
+                  <p>Cité Rouge</p>
+                </div>
+                <div class="heart">
+                  <i class="far fa-heart fa-2x"></i>
+                  <i class="fas fa-heart fa-2x"></i>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="restaurent__card">
+            <a href="delice.html">
+              <img src="public/img/restaurants/delice_sens.jpg">
+              <div class="restaurent__info__container">
+                <div class="restaurent__card__info">
+                  <h3>Le délice des sens</h3>
+                  <p>Folie-Méricourt</p>
+                </div>
+                <div class="heart">
+                  <i class="far fa-heart fa-2x"></i>
+                  <i class="fas fa-heart fa-2x"></i>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
-        <div class="restaurent__card">
-          <a href="francaise.html">
-            <img src="public/img/restaurants/francaise.jpg">
-            <div class="restaurent__info__container">
-              <div class="restaurent__card__info">
-                <h3>À la française</h3>
-                <p>Cité Rouge</p>
-              </div>
-              <div class="heart">
-                <i class="far fa-heart fa-2x"></i>
-                <i class="fas fa-heart fa-2x"></i>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="restaurent__card">
-          <a href="delice.html">
-            <img src="public/img/restaurants/delice_sens.jpg">
-            <div class="restaurent__info__container">
-              <div class="restaurent__card__info">
-                <h3>Le délice des sens</h3>
-                <p>Folie-Méricourt</p>
-              </div>
-              <div class="heart">
-                <i class="far fa-heart fa-2x"></i>
-                <i class="fas fa-heart fa-2x"></i>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </main>
   <!-- Footer -->
   <footer>
