--- a/delice.html
+++ b/delice.html
@@ -23,8 +23,8 @@
       <div class="menu__title">
         <H1>Le délice des sens</H1>
         <div class="heart">
-          <i class="far fa-heart fa-2x"></i>
-          <i class="fas fa-heart fa-2x"></i>
+          <i class="far fa-heart fa-2x heart--menu"></i>
+          <i class="fas fa-heart fa-2x heart--menu"></i>
         </div>
       </div>
       <div class="menu__carte">
