--- a/palette.html
+++ b/palette.html
@@ -25,80 +25,107 @@
       <div class="menu__title">
         <H1>La palette du goût</H1>
         <div class="heart">
-          <i class="far fa-heart fa-2x"></i>
-          <i class="fas fa-heart fa-2x"></i>
+          <i class="far fa-heart fa-2x heart--menu"></i>
+          <i class="fas fa-heart fa-2x heart--menu"></i>
         </div>
       </div>
       <div class="menu__carte">
         <h3>Entrées</h3>
         <div class="menu__plat">
-          <h4>Fricassée d'escargot</h4>
-          <div class="plat__desc">
-            <p>Au piment d'espelette</p>
-            <p><b>25€</b></p>
+          <div class="menu">
+            <h4>Fricassée d'escargot</h4>
+            <div class="plat__desc">
+              <p>Au piment d'espelette</p>
+              <b>25€</b>
+            </div>
           </div>
+          <i class="fas fa-check-circle menu--check"></i>
         </div>
         <div class="menu__plat">
-          <h4>Foie gras de cannard mi-cuit</h2>
+          <div class="menu">
+            <h4>Foie gras de cannard mi-cuit</h4>
             <div class="plat__desc">
               <p>Et ses copeaux de truffe noire</p>
-              <p><b>35€</b></p>
+              <b>35€</b>
             </div>
+          </div>
+          <i class="fas fa-check-circle menu--check"></i>
         </div>
         <div class="menu__plat">
-          <h4>Oeuf au plat</h2>
+          <div class="menu">
+          <h4>Oeuf au plat</h4>
             <div class="plat__desc">
               <p>Assaisonné à la truffe sur lit de caviar</p>
-              <p><b>20€</b></p>
+              <b>20€</b>
             </div>
+          </div>
+          <i class="fas fa-check-circle menu--check"></i>
         </div>
       </div>
       <div class="menu__carte">
         <h3>Plats</h3>
         <div class="menu__plat">
-          <h4>Filet de boeuf aux herbes</h2>
+          <div class="menu">
+          <h4>Filet de boeuf aux herbes</h4>
             <div class="plat__desc">
               <p>Accompagné de sa ribambelle de légumes</p>
-              <p><b>40€</b></p>
+              <b>40€</b>
             </div>
+            </div>
+            <i class="fas fa-check-circle menu--check"></i>
         </div>
         <div class="menu__plat">
-          <h4>Parmentier de queue de boeuf</h2>
+          <div class="menu">
+          <h4>Parmentier de queue de boeuf</h4>
             <div class="plat__desc">
               <p>À la truffe noire sur sa purée de panais</p>
-              <p><b>35€</b></p>
+              <b>35€</b>
             </div>
+            </div>
+            <i class="fas fa-check-circle menu--check"></i>
         </div>
         <div class="menu__plat">
-          <h4>Filet de turbot</h2>
+          <div class="menu">
+          <h4>Filet de turbot</h4>
             <div class="plat__desc">
               <p>Aux agrumes</p>
-              <p><b>44€</b></p>
+              <b>44€</b>
             </div>
+            </div>
+            <i class="fas fa-check-circle menu--check"></i>
         </div>
       </div>
       <div class="menu__carte">
         <h3>Desserts</h3>
         <div class="menu__plat">
-          <h4>Paris-Brest</h2>
+          <div class="menu">
+          <h4>Paris-Brest</h4>
             <div class="plat__desc">
               <p>Revisité</p>
-              <p><b>18€</b></p>
+              <b>18€</b>
             </div>
+            </div>
+            <i class="fas fa-check-circle menu--check"></i>
         </div>
         <div class="menu__plat">
-          <h4>Macaron au chocolat d'exception</h2>
+          <div class="menu">
+          <h4>Macaron au chocolat d'exception</h4>
             <div class="plat__desc">
               <p>Et glace à la vanille de Madagascar</p>
-              <p><b>22€</b></p>
+              <b>22€</b>
             </div>
+            </div>
+            <i class="fas fa-check-circle menu--check"></i>
         </div>
         <div class="menu__plat">
-          <h4>Mousse au chocolat</h2>
+          <div class="menu">
+          <h4>Mousse au chocolat</h4>
             <div class="plat__desc">
               <p>Au piment d'Espelette et à la truffe noire</p>
-              <p><b>23€</b></p>
+              <b>23€</b>
             </div>
+            </div>
+            <i class="fas fa-check-circle menu--check"></i>
         </div>
       </div>
       <button class="btn">Commander</button>
