--- a/palette.html
+++ b/palette.html
@@ -39,7 +39,9 @@
               <b>25€</b>
             </div>
           </div>
-          <i class="fas fa-check-circle menu--check"></i>
+          <div class="menu--check">
+          <i class="fas fa-check-circle"></i>
+          </div>
         </div>
         <div class="menu__plat">
           <div class="menu">
@@ -49,7 +51,9 @@
               <b>35€</b>
             </div>
           </div>
-          <i class="fas fa-check-circle menu--check"></i>
+          <div class="menu--check">
+          <i class="fas fa-check-circle"></i>
+          </div>
         </div>
         <div class="menu__plat">
           <div class="menu">
@@ -59,7 +63,9 @@
               <b>20€</b>
             </div>
           </div>
-          <i class="fas fa-check-circle menu--check"></i>
+          <div class="menu--check">
+          <i class="fas fa-check-circle"></i>
+          </div>
         </div>
       </div>
       <div class="menu__carte">
@@ -72,7 +78,9 @@
               <b>40€</b>
             </div>
             </div>
-            <i class="fas fa-check-circle menu--check"></i>
+            <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
+            </div>
         </div>
         <div class="menu__plat">
           <div class="menu">
@@ -82,7 +90,9 @@
               <b>35€</b>
             </div>
             </div>
-            <i class="fas fa-check-circle menu--check"></i>
+            <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
+            </div>
         </div>
         <div class="menu__plat">
           <div class="menu">
@@ -92,7 +102,9 @@
               <b>44€</b>
             </div>
             </div>
-            <i class="fas fa-check-circle menu--check"></i>
+            <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
+            </div>
         </div>
       </div>
       <div class="menu__carte">
@@ -105,7 +117,9 @@
               <b>18€</b>
             </div>
             </div>
-            <i class="fas fa-check-circle menu--check"></i>
+            <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
+            </div>
         </div>
         <div class="menu__plat">
           <div class="menu">
@@ -115,7 +129,9 @@
               <b>22€</b>
             </div>
             </div>
-            <i class="fas fa-check-circle menu--check"></i>
+            <div class="menu--check">
+            <i class=" fas fa-check-circle"></i>
+            </div>
         </div>
         <div class="menu__plat">
           <div class="menu">
@@ -125,7 +141,9 @@
               <b>23€</b>
             </div>
             </div>
-            <i class="fas fa-check-circle menu--check"></i>
+            <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
+            </div>
         </div>
       </div>
       <button class="btn">Commander</button>
