--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
   <title>Ohmyfood!</title>
 </head>
 <body">
-  <!-- Herder -->
-  <header>
+  <div class="loader__container">
+    <h1>Ohmyfood !</h1>
+    <div class="loader">
+      <div class="load__point point--1"></div>
+      <div class="load__point point--2"></div>
+      <div class="load__point point--3"></div>
+      <div class="load__point point--4"></div>
+      <div class="load__point point--5"></div>
+    </div>
+    </div>
+    <!-- Herder -->
+    <header>
     <div class="header__container">
       <img src="public/img/logo/ohmyfood.png" alt="logo">
     </div>
-  </header>
-  <!-- Main -->
-  <main>
+    </header>
+    <!-- Main -->
+    <main>
     <!-- Reservation -->
     <section class="reservation">
       <form action="#" method="get" id="reservation__ville">
@@ -121,9 +131,9 @@
         </div>
       </section>
     </div>
-  </main>
-  <!-- Footer -->
-  <footer>
+    </main>
+    <!-- Footer -->
+    <footer>
     <div class="footer__container">
       <img src="public/img/logo/ohmyfood.png" alt="logo">
       <div class="footer__info">
@@ -145,6 +155,6 @@
         <p>Contact</p>
       </a>
     </div>
-  </footer>
+    </footer>
 </body>
 </html>
