--- a/palette.html
+++ b/palette.html
@@ -29,9 +29,9 @@
           <i class="fas fa-heart fa-2x heart--menu"></i>
         </div>
       </div>
-      <div class="menu__carte">
+      <div class="menu__carte menu__carte--entrees">
         <h3>Entrées</h3>
-        <div class="menu__plat">
+        <div class="menu__plat menu__plat--1">
           <div class="menu">
             <h4>Fricassée d'escargot</h4>
             <div class="plat__desc">
@@ -43,7 +43,7 @@
           <i class="fas fa-check-circle"></i>
           </div>
         </div>
-        <div class="menu__plat">
+        <div class="menu__plat menu__plat--2">
           <div class="menu">
             <h4>Foie gras de cannard mi-cuit</h4>
             <div class="plat__desc">
@@ -55,7 +55,7 @@
           <i class="fas fa-check-circle"></i>
           </div>
         </div>
-        <div class="menu__plat">
+        <div class="menu__plat menu__plat--3">
           <div class="menu">
           <h4>Oeuf au plat</h4>
             <div class="plat__desc">
@@ -68,9 +68,9 @@
           </div>
         </div>
       </div>
-      <div class="menu__carte">
+      <div class="menu__carte menu__carte--plats">
         <h3>Plats</h3>
-        <div class="menu__plat">
+        <div class="menu__plat menu__plat--1 ">
           <div class="menu">
           <h4>Filet de boeuf aux herbes</h4>
             <div class="plat__desc">
@@ -82,7 +82,7 @@
             <i class="fas fa-check-circle"></i>
             </div>
         </div>
-        <div class="menu__plat">
+        <div class="menu__plat menu__plat--2">
           <div class="menu">
           <h4>Parmentier de queue de boeuf</h4>
             <div class="plat__desc">
@@ -94,7 +94,7 @@
             <i class="fas fa-check-circle"></i>
             </div>
         </div>
-        <div class="menu__plat">
+        <div class="menu__plat menu__plat--3">
           <div class="menu">
           <h4>Filet de turbot</h4>
             <div class="plat__desc">
@@ -107,9 +107,9 @@
             </div>
         </div>
       </div>
-      <div class="menu__carte">
+      <div class="menu__carte menu__carte--desserts">
         <h3>Desserts</h3>
-        <div class="menu__plat">
+        <div class="menu__plat menu__plat--1">
           <div class="menu">
           <h4>Paris-Brest</h4>
             <div class="plat__desc">
@@ -121,7 +121,7 @@
             <i class="fas fa-check-circle"></i>
             </div>
         </div>
-        <div class="menu__plat">
+        <div class="menu__plat menu__plat--2">
           <div class="menu">
           <h4>Macaron au chocolat d'exception</h4>
             <div class="plat__desc">
@@ -133,7 +133,7 @@
             <i class=" fas fa-check-circle"></i>
             </div>
         </div>
-        <div class="menu__plat">
+        <div class="menu__plat menu__plat--3">
           <div class="menu">
           <h4>Mousse au chocolat</h4>
             <div class="plat__desc">
