--- a/palette.html
+++ b/palette.html
@@ -25,8 +25,16 @@
       <div class="menu__title">
         <H1>La palette du goût</H1>
         <div class="heart">
-          <i class="far fa-heart fa-2x heart--menu"></i>
-          <i class="fas fa-heart fa-2x heart--menu"></i>
+          <svg class="heart--menu" viewBox="0 0 32 32">
+            <linearGradient id="lgrad" x1="0%" y1="50%" x2="100%" y2="50%">
+              <stop offset="0%" style="stop-color:rgb(147,86,220);stop-opacity:1.00" />
+              <stop offset="100%" style="stop-color:rgb(255,121,218);stop-opacity:1.00" />
+            </linearGradient>
+            <path class="test1"
+              d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
+            <path class="test2"
+              d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
+          </svg>
         </div>
       </div>
       <div class="menu__carte menu__carte--entrees">
