--- a/delice.html
+++ b/delice.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
   <script src="https://kit.fontawesome.com/c9edb6d62a.js" crossorigin="anonymous"></script>
   <title>Menu - Le délice des sens</title>
 </head>
+
 <body>
   <!-- Header -->
   <header>
@@ -23,79 +25,132 @@
       <div class="menu__title">
         <H1>Le délice des sens</H1>
         <div class="heart">
-          <i class="far fa-heart fa-2x heart--menu"></i>
-          <i class="fas fa-heart fa-2x heart--menu"></i>
+          <svg class="heart--menu" viewBox="0 0 32 32">
+            <linearGradient id="lgrad" x1="0%" y1="50%" x2="100%" y2="50%">
+              <stop offset="0%" style="stop-color:rgb(147,86,220);stop-opacity:1.00" />
+              <stop offset="100%" style="stop-color:rgb(255,121,218);stop-opacity:1.00" />
+            </linearGradient>
+            <path class="test1"
+              d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
+            <path class="test2"
+              d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
+          </svg>
         </div>
       </div>
-      <div class="menu__carte">
+      <div class="menu__carte menu__carte--entrees">
         <h3>Entrées</h3>
-        <div class="menu__plat">
-          <h4>Tartare de thon</h4>
-          <div class="plat__desc">
-            <p>Assaisonné au yuzu</p>
-            <p><b>25€</b></p>
+        <div class="menu__plat menu__plat--1">
+          <div class="menu">
+            <h4>Tartare de thon</h4>
+            <div class="plat__desc">
+              <p>Assaisonné au yuzu</p>
+              <b>25€</b>
+            </div>
+          </div>
+          <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
           </div>
         </div>
-        <div class="menu__plat">
-          <h4>Bouchée de homard croustillant</h2>
-          <div class="plat__desc">
-            <p>Et sa farandole de petits légumes</p>
-            <p><b>35€</b></p>
+        <div class="menu__plat menu__plat--2">
+          <div class="menu">
+            <h4>Bouchée de homard croustillant</h4>
+            <div class="plat__desc">
+              <p>Et sa farandole de petits légumes</p>
+              <b>35€</b>
+            </div>
+          </div>
+          <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
           </div>
         </div>
-        <div class="menu__plat">
-          <h4>Velouté de cèpes</h2>
-          <div class="plat__desc">
-            <p>Aux truffes</p>
-            <p><b>20€</b></p>
+        <div class="menu__plat menu__plat--3">
+          <div class="menu">
+            <h4>Velouté de cèpes</h4>
+            <div class="plat__desc">
+              <p>Aux truffes</p>
+              <b>20€</b>
+            </div>
+          </div>
+          <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
           </div>
         </div>
       </div>
-      <div class="menu__carte">
+      <div class="menu__carte menu__carte--plats">
         <h3>Plats</h3>
-        <div class="menu__plat">
-          <h4>Poulet rôti aux herbes de Provence</h2>
-          <div class="plat__desc">
-            <p>Et sa crème de truffe</p>
-            <p><b>40€</b></p>
+        <div class="menu__plat menu__plat--1 ">
+          <div class="menu">
+            <h4>Poulet rôti aux herbes de Provence</h4>
+            <div class="plat__desc">
+              <p>Et sa crème de truffe</p>
+              <b>40€</b>
+            </div>
+          </div>
+          <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
           </div>
         </div>
-        <div class="menu__plat">
-          <h4>Langouste rôtie</h2>
-          <div class="plat__desc">
-            <p>Et ses légumes de saison</p>
-            <p><b>35€</b></p>
+        <div class="menu__plat menu__plat--2">
+          <div class="menu">
+            <h4>Langouste rôtie</h4>
+            <div class="plat__desc">
+              <p>Langouste rôtie</p>
+              <b>35€</b>
+            </div>
+          </div>
+          <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
           </div>
         </div>
-        <div class="menu__plat">
-          <h4>Côte de boeuf Angus</h2>
-          <div class="plat__desc">
-            <p>Et sa purée de panais</p>
-            <p><b>44€</b></p>
+        <div class="menu__plat menu__plat--3">
+          <div class="menu">
+            <h4>Côte de boeuf Angus</h4>
+            <div class="plat__desc">
+              <p>Et sa purée de panais</p>
+              <b>44€</b>
+            </div>
+          </div>
+          <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
           </div>
         </div>
       </div>
-      <div class="menu__carte">
+      <div class="menu__carte menu__carte--desserts">
         <h3>Desserts</h3>
-        <div class="menu__plat">
-          <h4>Farandole de desserts</h2>
-          <div class="plat__desc">
-            <p>Du chef</p>
-            <p><b>18€</b></p>
+        <div class="menu__plat menu__plat--1">
+          <div class="menu">
+            <h4>Farandole de desserts</h4>
+            <div class="plat__desc">
+              <p>Du chef</p>
+              <b>18€</b>
+            </div>
+          </div>
+          <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
           </div>
         </div>
-        <div class="menu__plat">
-          <h4>Crème brulée</h2>
-          <div class="plat__desc">
-            <p>Revisitée</p>
-            <p><b>22€</b></p>
+        <div class="menu__plat menu__plat--2">
+          <div class="menu">
+            <h4>Crème brulée</h4>
+            <div class="plat__desc">
+              <p>Revisitée</p>
+              <b>22€</b>
+            </div>
+          </div>
+          <div class="menu--check">
+            <i class=" fas fa-check-circle"></i>
           </div>
         </div>
-        <div class="menu__plat">
-          <h4>Tiramisu</h2>
-          <div class="plat__desc">
-            <p>À la noisette</p>
-            <p><b>23€</b></p>
+        <div class="menu__plat menu__plat--3">
+          <div class="menu">
+            <h4>Tiramisu</h4>
+            <div class="plat__desc">
+              <p>À la noisette</p>
+              <b>23€</b>
+            </div>
+          </div>
+          <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
           </div>
         </div>
       </div>
@@ -127,4 +182,5 @@
     </div>
   </footer>
 </body>
+
 </html>
