--- a/enchantee.html
+++ b/enchantee.html
@@ -40,10 +40,12 @@
       <div class="menu__carte menu__carte--entrees">
         <h3>Entrées</h3>
         <div class="menu__plat menu__plat--1">
-          <div class="menu">
-            <h4>Ravioles de foie gras</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Ravioles de foie gras</h4>
               <p>Accompagnés de leur crème à la truffe</p>
+            </div>
+            <div class="menu__prix">
               <b>25€</b>
             </div>
           </div>
@@ -52,10 +54,12 @@
           </div>
         </div>
         <div class="menu__plat menu__plat--2">
-          <div class="menu">
-            <h4>Caviar osciètre</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Caviar osciètre</h4>
               <p>Sur blini à la farine de blé noir</p>
+            </div>
+            <div class="menu__prix">
               <b>35€</b>
             </div>
           </div>
@@ -64,10 +68,12 @@
           </div>
         </div>
         <div class="menu__plat menu__plat--3">
-          <div class="menu">
-            <h4>Homard et espuma de potiron</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Homard et espuma de potiron</h4>
               <p>Mariné aux zestes d'orange</p>
+            </div>
+            <div class="menu__prix">
               <b>20€</b>
             </div>
           </div>
@@ -76,99 +82,112 @@
           </div>
         </div>
         <div class="menu__plat menu__plat--4">
-          <div class="menu">
-            <h4>Foie gras de canard cuit entier</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Foie gras de canard cuit entier</h4>
               <p>Confiture de figue et pain toasté</p>
-              <b>35€</b>
+            </div>
+            <div class="menu__prix">
+              <b>20€</b>
             </div>
           </div>
           <div class="menu--check">
             <i class="fas fa-check-circle"></i>
           </div>
         </div>
-      </div>
-      <div class="menu__carte menu__carte--plats">
-        <h3>Plats</h3>
-        <div class="menu__plat menu__plat--1 ">
-          <div class="menu">
-            <h4>Noix de coquilles Saint-Jacques</h4>
-            <div class="plat__desc">
-              <p>Sur lit de purée de céleri-rave</p>
-              <b>40€</b>
+        </div>
+        <div class="menu__carte menu__carte--plats">
+          <h3>Plats</h3>
+          <div class="menu__plat menu__plat--1">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Noix de coquilles Saint-Jacques</h4>
+                <p>Sur lit de purée de céleri-rave</p>
+              </div>
+              <div class="menu__prix">
+                <b>40€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="menu__plat menu__plat--2">
-          <div class="menu">
-            <h4>Langoustine poêlée</h4>
-            <div class="plat__desc">
-              <p>Purée de patate douce</p>
-              <b>35€</b>
+          <div class="menu__plat menu__plat--2">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Langoustine poêlée</h4>
+                <p>Langoustine poêlée</p>
+              </div>
+              <div class="menu__prix">
+                <b>35€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="menu__plat menu__plat--3">
-          <div class="menu">
-            <h4>Mijoté de queue de boeuf</h4>
-            <div class="plat__desc">
-              <p>Et riz sauvage aux zestes de citron</p>
-              <b>44€</b>
+          <div class="menu__plat menu__plat--3">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Mijoté de queue de boeuf</h4>
+                <p>Et riz sauvage aux zestes de citron</p>
+              </div>
+              <div class="menu__prix">
+                <b>44€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
         </div>
-      </div>
-      <div class="menu__carte menu__carte--desserts">
-        <h3>Desserts</h3>
-        <div class="menu__plat menu__plat--1">
-          <div class="menu">
-            <h4>Macaron noisette et chocolat</h4>
-            <div class="plat__desc">
-              <p>Glace au caramel brun et sel de Guérande</p>
-              <b>18€</b>
+        <div class="menu__carte menu__carte--desserts">
+          <h3>Desserts</h3>
+          <div class="menu__plat menu__plat--1">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Macaron noisette et chocolat</h4>
+                <p>Glace au caramel brun et sel de Guérande</p>
+              </div>
+              <div class="menu__prix">
+                <b>18€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="menu__plat menu__plat--2">
-          <div class="menu">
-            <h4>Baba au rhum revisité</h4>
-            <div class="plat__desc">
-              <p>Avec son coulis de citron</p>
-              <b>22€</b>
+          <div class="menu__plat menu__plat--2">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Baba au rhum revisité</h4>
+                <p>Avec son coulis de citron</p>
+              </div>
+              <div class="menu__prix">
+                <b>22€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class=" fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="menu__plat menu__plat--3">
-          <div class="menu">
-            <h4>Tarte au citron meringuée</h4>
-            <div class="plat__desc">
-              <p>Déstructurée</p>
-              <b>23€</b>
+          <div class="menu__plat menu__plat--3">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Tarte au citron meringuée</h4>
+                <p>Déstructurée</p>
+              </div>
+              <div class="menu__prix">
+                <b>23€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
         </div>
-      </div>
-      <button class="btn">Commander</button>
-    </div>
-  </main>
+        <button class="btn">Commander</button>
+        </div>
   <!-- Footer -->
   <footer>
     <div class="footer__container">
