--- a/delice.html
+++ b/delice.html
@@ -40,10 +40,12 @@
       <div class="menu__carte menu__carte--entrees">
         <h3>Entrées</h3>
         <div class="menu__plat menu__plat--1">
-          <div class="menu">
-            <h4>Tartare de thon</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Tartare de thon</h4>
               <p>Assaisonné au yuzu</p>
+            </div>
+            <div class="menu__prix">
               <b>25€</b>
             </div>
           </div>
@@ -52,10 +54,12 @@
           </div>
         </div>
         <div class="menu__plat menu__plat--2">
-          <div class="menu">
-            <h4>Bouchée de homard croustillant</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Bouchée de homard croustillant</h4>
               <p>Et sa farandole de petits légumes</p>
+            </div>
+            <div class="menu__prix">
               <b>35€</b>
             </div>
           </div>
@@ -64,10 +68,12 @@
           </div>
         </div>
         <div class="menu__plat menu__plat--3">
-          <div class="menu">
-            <h4>Velouté de cèpes</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Velouté de cèpes</h4>
               <p>Aux truffes</p>
+            </div>
+            <div class="menu__prix">
               <b>20€</b>
             </div>
           </div>
@@ -75,88 +81,99 @@
             <i class="fas fa-check-circle"></i>
           </div>
         </div>
-      </div>
-      <div class="menu__carte menu__carte--plats">
-        <h3>Plats</h3>
-        <div class="menu__plat menu__plat--1 ">
-          <div class="menu">
-            <h4>Poulet rôti aux herbes de Provence</h4>
-            <div class="plat__desc">
-              <p>Et sa crème de truffe</p>
-              <b>40€</b>
+        </div>
+        <div class="menu__carte menu__carte--plats">
+          <h3>Plats</h3>
+          <div class="menu__plat menu__plat--1">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Poulet rôti aux herbes de Provence</h4>
+                <p>Et sa crème de truffe</p>
+              </div>
+              <div class="menu__prix">
+                <b>40€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="menu__plat menu__plat--2">
-          <div class="menu">
-            <h4>Langouste rôtie</h4>
-            <div class="plat__desc">
-              <p>Langouste rôtie</p>
-              <b>35€</b>
+          <div class="menu__plat menu__plat--2">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Langouste rôtie</h4>
+                <p>Et ses légumes de saison</p>
+              </div>
+              <div class="menu__prix">
+                <b>35€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="menu__plat menu__plat--3">
-          <div class="menu">
-            <h4>Côte de boeuf Angus</h4>
-            <div class="plat__desc">
-              <p>Et sa purée de panais</p>
-              <b>44€</b>
+          <div class="menu__plat menu__plat--3">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Côte de boeuf Angus</h4>
+                <p>Et sa purée de panais</p>
+              </div>
+              <div class="menu__prix">
+                <b>44€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
         </div>
-      </div>
-      <div class="menu__carte menu__carte--desserts">
-        <h3>Desserts</h3>
-        <div class="menu__plat menu__plat--1">
-          <div class="menu">
-            <h4>Farandole de desserts</h4>
-            <div class="plat__desc">
-              <p>Du chef</p>
-              <b>18€</b>
+        <div class="menu__carte menu__carte--desserts">
+          <h3>Desserts</h3>
+          <div class="menu__plat menu__plat--1">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Farandole de desserts</h4>
+                <p>Du chef</p>
+              </div>
+              <div class="menu__prix">
+                <b>18€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="menu__plat menu__plat--2">
-          <div class="menu">
-            <h4>Crème brulée</h4>
-            <div class="plat__desc">
-              <p>Revisitée</p>
-              <b>22€</b>
+          <div class="menu__plat menu__plat--2">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Crème brulée</h4>
+                <p>Revisitée</p>
+              </div>
+              <div class="menu__prix">
+                <b>22€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class=" fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="menu__plat menu__plat--3">
-          <div class="menu">
-            <h4>Tiramisu</h4>
-            <div class="plat__desc">
-              <p>À la noisette</p>
-              <b>23€</b>
+          <div class="menu__plat menu__plat--3">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Tiramisu</h4>
+                <p>À la noisette</p>
+              </div>
+              <div class="menu__prix">
+                <b>23€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
         </div>
-      </div>
-      <button class="btn">Commander</button>
-    </div>
-  </main>
+        <button class="btn">Commander</button>
+        </div>
   <!-- Footer -->
   <footer>
     <div class="footer__container">
