--- a/francaise.html
+++ b/francaise.html
@@ -40,10 +40,12 @@
       <div class="menu__carte menu__carte--entrees">
         <h3>Entrées</h3>
         <div class="menu__plat menu__plat--1">
-          <div class="menu">
-            <h4>Tartare de poulpe acidulé</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Tartare de poulpe acidulé</h4>
               <p>Aux zestes d'orange</p>
+            </div>
+            <div class="menu__prix">
               <b>25€</b>
             </div>
           </div>
@@ -52,10 +54,12 @@
           </div>
         </div>
         <div class="menu__plat menu__plat--2">
-          <div class="menu">
-            <h4>Velouté de légumes d'antan</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Velouté de légumes d'antan</h4>
               <p>Carotte, panais, topinambour</p>
+            </div>
+            <div class="menu__prix">
               <b>35€</b>
             </div>
           </div>
@@ -64,10 +68,12 @@
           </div>
         </div>
         <div class="menu__plat menu__plat--3">
-          <div class="menu">
-            <h4>Soupe à l'oignon</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Soupe à l'oignon</h4>
               <p>Revisitée</p>
+            </div>
+            <div class="menu__prix">
               <b>20€</b>
             </div>
           </div>
@@ -75,88 +81,99 @@
             <i class="fas fa-check-circle"></i>
           </div>
         </div>
-      </div>
-      <div class="menu__carte menu__carte--plats">
-        <h3>Plats</h3>
-        <div class="menu__plat menu__plat--1 ">
-          <div class="menu">
-            <h4>Coquilles Saint-Jacques</h4>
-            <div class="plat__desc">
-              <p>Accompagnées d'une purée de panais</p>
-              <b>40€</b>
+        </div>
+        <div class="menu__carte menu__carte--plats">
+          <h3>Plats</h3>
+          <div class="menu__plat menu__plat--1">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Coquilles Saint-Jacques</h4>
+                <p>Accompagnées d'une purée de panais</p>
+              </div>
+              <div class="menu__prix">
+                <b>40€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="menu__plat menu__plat--2">
-          <div class="menu">
-            <h4>Magret de canard</h4>
-            <div class="plat__desc">
-              <p>Et parmentier de pommes de terre</p>
-              <b>35€</b>
+          <div class="menu__plat menu__plat--2">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Magret de canard</h4>
+                <p>Et parmentier de pommes de terre</p>
+              </div>
+              <div class="menu__prix">
+                <b>35€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="menu__plat menu__plat--3">
-          <div class="menu">
-            <h4>Pigeonneau d’Ille-et-Vilaine</h4>
-            <div class="plat__desc">
-              <p>Sur son lit de gnocchis aux légumess</p>
-              <b>44€</b>
+          <div class="menu__plat menu__plat--3">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                <p>Sur son lit de gnocchis aux légumes</p>
+              </div>
+              <div class="menu__prix">
+                <b>44€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
         </div>
-      </div>
-      <div class="menu__carte menu__carte--desserts">
-        <h3>Desserts</h3>
-        <div class="menu__plat menu__plat--1">
-          <div class="menu">
-            <h4>Pétales de violettes glacés</h4>
-            <div class="plat__desc">
-              <p>Et purée de noisettes</p>
-              <b>18€</b>
+        <div class="menu__carte menu__carte--desserts">
+          <h3>Desserts</h3>
+          <div class="menu__plat menu__plat--1">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Pétales de violettes glacés</h4>
+                <p>Et purée de noisettes</p>
+              </div>
+              <div class="menu__prix">
+                <b>18€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="menu__plat menu__plat--2">
-          <div class="menu">
-            <h4>Fondant au chocolat</h4>
-            <div class="plat__desc">
-              <p>Revisité</p>
-              <b>22€</b>
+          <div class="menu__plat menu__plat--2">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Fondant au chocolat</h4>
+                <p>Revisité</p>
+              </div>
+              <div class="menu__prix">
+                <b>22€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class=" fas fa-check-circle"></i>
-          </div>
-        </div>
-        <div class="menu__plat menu__plat--3">
-          <div class="menu">
-            <h4>Millefeuille croustillant</h4>
-            <div class="plat__desc">
-              <p>Myrtilles et pâte d’amande</p>
-              <b>23€</b>
+          <div class="menu__plat menu__plat--3">
+            <div class="menu__desc">
+              <div class="menu">
+                <h4>Millefeuille croustillant</h4>
+                <p>Myrtilles et pâte d’amande</p>
+              </div>
+              <div class="menu__prix">
+                <b>23€</b>
+              </div>
+            </div>
+            <div class="menu--check">
+              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu--check">
-            <i class="fas fa-check-circle"></i>
-          </div>
         </div>
-      </div>
-      <button class="btn">Commander</button>
-    </div>
-  </main>
+        <button class="btn">Commander</button>
+        </div>
   <!-- Footer -->
   <footer>
     <div class="footer__container">
