--- a/palette.html
+++ b/palette.html
@@ -40,10 +40,12 @@
       <div class="menu__carte menu__carte--entrees">
         <h3>Entrées</h3>
         <div class="menu__plat menu__plat--1">
-          <div class="menu">
-            <h4>Fricassée d'escargot</h4>
-            <div class="plat__desc">
-              <p>Au piment d'espelette</p>
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Fricassée d'escargot</h4>
+                <p>Au piment d'espelette</p>
+            </div>
+            <div class="menu__prix">
               <b>25€</b>
             </div>
           </div>
@@ -52,106 +54,122 @@
           </div>
         </div>
         <div class="menu__plat menu__plat--2">
-          <div class="menu">
-            <h4>Foie gras de cannard mi-cuit</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Foie gras de canard mi-cuit</h4>
               <p>Et ses copeaux de truffe noire</p>
+            </div>
+            <div class="menu__prix">
               <b>35€</b>
             </div>
           </div>
           <div class="menu--check">
-          <i class="fas fa-check-circle"></i>
+            <i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="menu__plat menu__plat--3">
-          <div class="menu">
-          <h4>Oeuf au plat</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Oeuf au plat</h4>
               <p>Assaisonné à la truffe sur lit de caviar</p>
+            </div>
+            <div class="menu__prix">
               <b>20€</b>
             </div>
           </div>
           <div class="menu--check">
-          <i class="fas fa-check-circle"></i>
+            <i class="fas fa-check-circle"></i>
           </div>
         </div>
       </div>
       <div class="menu__carte menu__carte--plats">
         <h3>Plats</h3>
-        <div class="menu__plat menu__plat--1 ">
-          <div class="menu">
-          <h4>Filet de boeuf aux herbes</h4>
-            <div class="plat__desc">
+        <div class="menu__plat menu__plat--1">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Filet de boeuf aux herbes</h4>
               <p>Accompagné de sa ribambelle de légumes</p>
+            </div>
+            <div class="menu__prix">
               <b>40€</b>
             </div>
-            </div>
-            <div class="menu--check">
+          </div>
+          <div class="menu--check">
             <i class="fas fa-check-circle"></i>
-            </div>
+          </div>
         </div>
         <div class="menu__plat menu__plat--2">
-          <div class="menu">
-          <h4>Parmentier de queue de boeuf</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Parmentier de queue de boeuf</h4>
               <p>À la truffe noire sur sa purée de panais</p>
+            </div>
+            <div class="menu__prix">
               <b>35€</b>
             </div>
-            </div>
-            <div class="menu--check">
+          </div>
+          <div class="menu--check">
             <i class="fas fa-check-circle"></i>
-            </div>
+          </div>
         </div>
         <div class="menu__plat menu__plat--3">
-          <div class="menu">
-          <h4>Filet de turbot</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Filet de turbot</h4>
               <p>Aux agrumes</p>
+            </div>
+            <div class="menu__prix">
               <b>44€</b>
             </div>
-            </div>
-            <div class="menu--check">
+          </div>
+          <div class="menu--check">
             <i class="fas fa-check-circle"></i>
-            </div>
+          </div>
         </div>
       </div>
       <div class="menu__carte menu__carte--desserts">
         <h3>Desserts</h3>
         <div class="menu__plat menu__plat--1">
-          <div class="menu">
-          <h4>Paris-Brest</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Paris-Brest</h4>
               <p>Revisité</p>
+            </div>
+            <div class="menu__prix">
               <b>18€</b>
             </div>
-            </div>
-            <div class="menu--check">
+          </div>
+          <div class="menu--check">
             <i class="fas fa-check-circle"></i>
-            </div>
+          </div>
         </div>
         <div class="menu__plat menu__plat--2">
-          <div class="menu">
-          <h4>Macaron au chocolat d'exception</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Macaron au chocolat d'exception</h4>
               <p>Et glace à la vanille de Madagascar</p>
+            </div>
+            <div class="menu__prix">
               <b>22€</b>
             </div>
-            </div>
-            <div class="menu--check">
-            <i class=" fas fa-check-circle"></i>
-            </div>
+          </div>
+          <div class="menu--check">
+            <i class="fas fa-check-circle"></i>
+          </div>
         </div>
         <div class="menu__plat menu__plat--3">
-          <div class="menu">
-          <h4>Mousse au chocolat</h4>
-            <div class="plat__desc">
+          <div class="menu__desc">
+            <div class="menu">
+              <h4>Mousse au chocolat</h4>
               <p>Au piment d'Espelette et à la truffe noire</p>
+            </div>
+            <div class="menu__prix">
               <b>23€</b>
             </div>
-            </div>
-            <div class="menu--check">
+          </div>
+          <div class="menu--check">
             <i class="fas fa-check-circle"></i>
-            </div>
+          </div>
         </div>
       </div>
       <button class="btn">Commander</button>
