--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <a href="#">
         <p>Mentions Légales</p>
       </a>
-      <a href="#">
+      <a href="mailto:contact@ohmyfood.fr">
         <p>Contact</p>
       </a>
     </div>
