--- a/palette.html
+++ b/palette.html
@@ -43,7 +43,7 @@
           <div class="menu__desc">
             <div class="menu">
               <h4>Fricassée d'escargot</h4>
-                <p>Au piment d'espelette</p>
+              <p>Au piment d'espelette</p>
             </div>
             <div class="menu__prix">
               <b>25€</b>
@@ -194,7 +194,7 @@
       <a href="#">
         <p>Mentions Légales</p>
       </a>
-      <a href="#">
+      <a href="mailto:contact@ohmyfood.fr">
         <p>Contact</p>
       </a>
     </div>
