--- a/enchantee.html
+++ b/enchantee.html
@@ -207,7 +207,7 @@
       <a href="#">
         <p>Mentions Légales</p>
       </a>
-      <a href="#">
+      <a href="mailto:contact@ohmyfood.fr">
         <p>Contact</p>
       </a>
     </div>
