--- a/palette.html
+++ b/palette.html
@@ -42,7 +42,7 @@
         <div class="menu__plat menu__plat--1">
           <div class="menu__desc">
             <div class="menu">
-              <h4>Fricassée d'escargot</h4>
+              <div class="test"><h4>Fricassée d'escargot</h4></div>
               <p>Au piment d'espelette</p>
             </div>
             <div class="menu__prix">
