--- a/delice.html
+++ b/delice.html
@@ -174,6 +174,7 @@
         </div>
         <button class="btn">Commander</button>
         </div>
+    </main>
   <!-- Footer -->
   <footer>
     <div class="footer__container">
