--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <script src="https://kit.fontawesome.com/c9edb6d62a.js" crossorigin="anonymous"></script>
   <title>Ohmyfood!</title>
 </head>
-<body">
+<body>
   <div class="loader__container">
-    <h1>Ohmyfood !</h1>
+    <span>Ohmyfood !</span>
     <div class="loader">
       <div class="load__point point--1"></div>
       <div class="load__point point--2"></div>
@@ -43,7 +43,7 @@
     <div class="site__container">
       <section class="fonctionnement">
         <div class="fonctionnement__container">
-          <h1>Fonctionnement</h1>
+          <h2>Fonctionnement</h2>
           <div class="fonctionnement__regles">
             <span>1</span>
             <i class="fas fa-mobile-alt"></i>
@@ -64,11 +64,11 @@
       <!-- Restaurents -->
       <section class="restaurent">
         <div class="restaurent__container">
-          <h1>Restaurants</h1>
+          <h2>Restaurants</h2>
           <div class="restaurent__card">
             <a href="palette.html">
               <p class="nouveau">Nouveau</p>
-              <img src="public/img/restaurants/palette_gout.jpg">
+              <img src="public/img/restaurants/palette_gout.jpg" alt="Restaurant La palette du goût">
               <div class="restaurent__info__container">
                 <div class="restaurent__card__info">
                   <h3>La palette du goût</h3>
@@ -83,9 +83,9 @@
                   <stop offset="0%" style="stop-color:rgb(147,86,220);stop-opacity:1.00" />
                   <stop offset="100%" style="stop-color:rgb(255,121,218);stop-opacity:1.00" />
                 </linearGradient>
-                <path class="test1"
+                <path class="heart--1"
                   d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
-                <path class="test2"
+                <path class="heart--2"
                   d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
               </svg>
             </div>
@@ -93,7 +93,7 @@
           <div class="restaurent__card">
             <a href="enchantee.html">
               <p class="nouveau">Nouveau</p>
-              <img src="public/img/restaurants/note_enchantee.jpg">
+              <img src="public/img/restaurants/note_enchantee.jpg" alt="Restaurant La note enchantée">
               <div class="restaurent__info__container">
                 <div class="restaurent__card__info">
                   <h3>La note enchantée</h3>
@@ -103,20 +103,16 @@
             </a>
             <div class="heart">
               <svg class="" viewBox="0 0 32 32">
-                <linearGradient id="lgrad" x1="0%" y1="50%" x2="100%" y2="50%">
-                  <stop offset="0%" style="stop-color:rgb(147,86,220);stop-opacity:1.00" />
-                  <stop offset="100%" style="stop-color:rgb(255,121,218);stop-opacity:1.00" />
-                </linearGradient>
-                <path class="test1"
+                <path class="heart--1"
                   d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
-                <path class="test2"
+                <path class="heart--2"
                   d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
               </svg>
             </div>
           </div>
           <div class="restaurent__card">
             <a href="francaise.html">
-              <img src="public/img/restaurants/francaise.jpg">
+              <img src="public/img/restaurants/francaise.jpg" alt="Restaurant A la française">
               <div class="restaurent__info__container">
                 <div class="restaurent__card__info">
                   <h3>À la française</h3>
@@ -126,20 +122,16 @@
             </a>
             <div class="heart">
               <svg class="" viewBox="0 0 32 32">
-                <linearGradient id="lgrad" x1="0%" y1="50%" x2="100%" y2="50%">
-                  <stop offset="0%" style="stop-color:rgb(147,86,220);stop-opacity:1.00" />
-                  <stop offset="100%" style="stop-color:rgb(255,121,218);stop-opacity:1.00" />
-                </linearGradient>
-                <path class="test1"
+                <path class="heart--1"
                   d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
-                <path class="test2"
+                <path class="heart--2"
                   d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
               </svg>
             </div>
           </div>
           <div class="restaurent__card">
             <a href="delice.html">
-              <img src="public/img/restaurants/delice_sens.jpg">
+              <img src="public/img/restaurants/delice_sens.jpg" alt="Restaurant Le délice des sens">
               <div class="restaurent__info__container">
                 <div class="restaurent__card__info">
                   <h3>Le délice des sens</h3>
@@ -149,13 +141,9 @@
             </a>
             <div class="heart">
               <svg class="" viewBox="0 0 32 32">
-                <linearGradient id="lgrad" x1="0%" y1="50%" x2="100%" y2="50%">
-                  <stop offset="0%" style="stop-color:rgb(147,86,220);stop-opacity:1.00" />
-                  <stop offset="100%" style="stop-color:rgb(255,121,218);stop-opacity:1.00" />
-                </linearGradient>
-                <path class="test1"
+                <path class="heart--1"
                   d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
-                <path class="test2"
+                <path class="heart--2"
                   d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
               </svg>
             </div>
