correction btn + sementique

--- a/enchantee.html
+++ b/enchantee.html
@@ -186,9 +186,9 @@
             </div>
           </div>
         </div>
-        <button class="btn">Commander</button>
+        <button class="btn btn--menu">Commander</button>
         </div>
-    </main>
+  </main>
   <!-- Footer -->
   <footer>
     <div class="footer__container">
