--- a/delice.html
+++ b/delice.html
@@ -172,9 +172,9 @@
             </div>
           </div>
         </div>
-        <button class="btn">Commander</button>
+        <button class="btn btn--menu">Commander</button>
         </div>
-    </main>
+  </main>
   <!-- Footer -->
   <footer>
     <div class="footer__container">
