--- a/francaise.html
+++ b/francaise.html
@@ -172,7 +172,7 @@
             </div>
           </div>
         </div>
-        <button class="btn">Commander</button>
+        <button class="btn btn--menu">Commander</button>
         </div>
   </main>
   <!-- Footer -->
